update spell checker

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,14 @@
     "FILESYSPATH",
     "flextrek",
     "HRESULT",
+    "katyo",
+    "NUMPAD",
+    "NUMPADADD",
+    "NUMPADDECIMAL",
+    "NUMPADDIVIDE",
+    "NUMPADENTER",
+    "NUMPADMULTIPLY",
+    "NUMPADSUBTRACT",
     "phwnd",
     "println",
     "scopeguard",
