--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "flextrek"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 
 authors = ["inintencunter <2911583893@qq.com>"]
@@ -44,7 +44,7 @@ windows = { version = "0.58", features = [
 urlencoding = "2.1.3"
 scopeguard = "1.2.0"
 futures = "0.3.31"
-tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "macros"] }
+tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync"] }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
